fix body overflow for smaller devices

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
     height: fit-content;
     min-height: 100vh;
     min-height: 100svh;
-    overflow: hidden;
 }
 
 .page {
